# ksu_cis750_barneshut

./: .gitignore  CMakeLists.txt  README.md  block_size_test.sh  input.csv  nbody_performance_test.sh  scalability_test.sh  theta_value_test.sh
lib/: CMakeRC.cmake
src/burtscher/: BarnesHutParticleSystem.cpp  BarnesHutParticleSystem.h  CMakeLists.txt  ECL-BH_45.cu  Particle_cuda.cu  SimulationParameters.h  kernels.cu  main.cpp
src/common/: VectorUtils.c  VectorUtils.h  fileIO_util.c  fileIO_util.h  octree.c  octree.h  read_input.h  result_file.cpp  result_file.h  vector_utils.c  vector_utils.cu  vector_utils.cuh  vector_utils.h
src/datageneration/: CMakeLists.txt  data_generator.c
src/nyland/: CMakeLists.txt  bodysystem.h  bodysystemcpu.cpp  bodysystemcuda.cpp  bodysystemcuda.cu  cutil.cpp  cutil.h  error_checker.h  nbody.cpp  paramgl.cpp  stopwatch_linux.h  stopwatch_win.h
src/parallel/: CMakeLists.txt  cuda_barnes_hut.cu  cuda_octree.c  cuda_octree.cu  cuda_octree.cuh  cuda_octree.h
src/serial/: CMakeLists.txt  octree_testing.c  serial_barnes_hut.c  serial_barnes_hut.cpp  serial_direct_sum.c  serial_direct_sum.cpp
src/test/: CMakeLists.txt  compare_outputs.cpp
src/visualizer/: CMakeLists.txt  CameraController.cpp  camera.h  camera_controller.cpp  camera_controller.h  imgui_ui.cpp  imgui_ui.h  result_file.cpp  result_file.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  vertex.h  vertex_buffer.h  visualizer.cpp
src/visualizer/shader/: simple_fragment.glsl  simple_vertex.glsl  star_fragment.glsl  star_vertex.glsl
